Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29330

QFrame does not use frame shadow in frameWidth calculation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0
    • 4.6.3, 4.7.4, 4.8.4, 5.0.0
    • None
    • 29c4913b02f3970070af2ef18340dfea0b8fa4c7

    Description

      The method QFrame::updateStyledFrameWidths() used to calculate frame width does not use the current frame shadow in setting the style options (opt.state) when calling style()->subElementRect(...).

      The same code in the drawFrame method that sets the opt.state based on frameShadow needs to be copied to the updateStyledFrameWidths.

      if (frameShadow == Sunken)
      opt.state |= QStyle::State_Sunken;
      else if (frameShadow == Raised)
      opt.state |= QStyle::State_Raised;

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            peppe Giuseppe D'Angelo
            mcarter Michael Carter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes